// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Component should render correctly with custom props 1`] = `
<ProgressBox>
  <Bar
    posX={10}
    theme={
      Object {
        "name": "default",
      }
    }
    width={20}
  />
</ProgressBox>
`;

exports[`ProgressBar Component should render correctly with default props 1`] = `
<ProgressBox>
  <Bar
    posX={0}
    theme={
      Object {
        "name": "default",
      }
    }
    width={0}
  />
</ProgressBox>
`;
